src/generate/MyParser.java

package generate;

// Generated from C:/Users/Wesam_KH/IdeaProjects/compiler_2/src\MyParser.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NAME_VAR=1, PRACETOBJECTOPEN=2, POEQUAlCOMPAIR=3, PO_AND=4, PRACET_OBJECT_CLOSE=5, 
		PONAME_VAR=6, PODEFINITION=7, PRACET_LIST_OPEN=8, PRACET_OBJECT_INNER_OPEN=9, 
		PRACET_BODY_OPEN=10, DOUBLE_QUOTATION_OPEN=11, POCOMMA=12, PODOT=13, PONUMBER=14, 
		PRACET_LIST_CLOSE=15, PLDOUBLE_QUOTATION_OPEN=16, PLPRACET_OBJECT_OPEN=17, 
		PLCOMMA=18, PLNAME_VAR=19, PRACET_BODY_CLOSE=20, PBPRACET_OBJECT_INNER_OPEN=21, 
		PBPRACET_BODY_OPEN=22, PBIF=23, PBSQ=24, PBEQUAL=25, PBNAME_VAR=26, DOUBLE_QUOTATION_CLOSE=27, 
		DQTEXT_STRING=28;
	public static final int
		RULE_startCompielr = 0, RULE_objectsScreens = 1, RULE_objectsScreen = 2, 
		RULE_attribute = 3, RULE_type = 4, RULE_simpleobject = 5, RULE_function = 6, 
		RULE_string = 7, RULE_number = 8, RULE_list = 9, RULE_static = 10, RULE_stringList = 11, 
		RULE_cntr = 12, RULE_defineObj = 13, RULE_equalObj = 14, RULE_condition = 15, 
		RULE_objectBody = 16, RULE_compair = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"startCompielr", "objectsScreens", "objectsScreen", "attribute", "type", 
			"simpleobject", "function", "string", "number", "list", "static", "stringList", 
			"cntr", "defineObj", "equalObj", "condition", "objectBody", "compair"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NAME_VAR", "PRACETOBJECTOPEN", "POEQUAlCOMPAIR", "PO_AND", "PRACET_OBJECT_CLOSE", 
			"PONAME_VAR", "PODEFINITION", "PRACET_LIST_OPEN", "PRACET_OBJECT_INNER_OPEN", 
			"PRACET_BODY_OPEN", "DOUBLE_QUOTATION_OPEN", "POCOMMA", "PODOT", "PONUMBER", 
			"PRACET_LIST_CLOSE", "PLDOUBLE_QUOTATION_OPEN", "PLPRACET_OBJECT_OPEN", 
			"PLCOMMA", "PLNAME_VAR", "PRACET_BODY_CLOSE", "PBPRACET_OBJECT_INNER_OPEN", 
			"PBPRACET_BODY_OPEN", "PBIF", "PBSQ", "PBEQUAL", "PBNAME_VAR", "DOUBLE_QUOTATION_CLOSE", 
			"DQTEXT_STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartCompielrContext extends ParserRuleContext {
		public TerminalNode NAME_VAR() { return getToken(MyParser.NAME_VAR, 0); }
		public TerminalNode PRACETOBJECTOPEN() { return getToken(MyParser.PRACETOBJECTOPEN, 0); }
		public ObjectsScreensContext objectsScreens() {
			return getRuleContext(ObjectsScreensContext.class,0);
		}
		public TerminalNode PRACET_OBJECT_CLOSE() { return getToken(MyParser.PRACET_OBJECT_CLOSE, 0); }
		public StartCompielrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startCompielr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterStartCompielr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitStartCompielr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitStartCompielr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartCompielrContext startCompielr() throws RecognitionException {
		StartCompielrContext _localctx = new StartCompielrContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startCompielr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME_VAR) {
				{
				setState(36);
				match(NAME_VAR);
				setState(37);
				match(PRACETOBJECTOPEN);
				setState(38);
				objectsScreens();
				setState(39);
				match(PRACET_OBJECT_CLOSE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectsScreensContext extends ParserRuleContext {
		public TerminalNode PONAME_VAR() { return getToken(MyParser.PONAME_VAR, 0); }
		public TerminalNode PODEFINITION() { return getToken(MyParser.PODEFINITION, 0); }
		public TerminalNode PRACET_LIST_OPEN() { return getToken(MyParser.PRACET_LIST_OPEN, 0); }
		public TerminalNode PRACET_LIST_CLOSE() { return getToken(MyParser.PRACET_LIST_CLOSE, 0); }
		public List<ObjectsScreenContext> objectsScreen() {
			return getRuleContexts(ObjectsScreenContext.class);
		}
		public ObjectsScreenContext objectsScreen(int i) {
			return getRuleContext(ObjectsScreenContext.class,i);
		}
		public List<TerminalNode> PLCOMMA() { return getTokens(MyParser.PLCOMMA); }
		public TerminalNode PLCOMMA(int i) {
			return getToken(MyParser.PLCOMMA, i);
		}
		public ObjectsScreensContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectsScreens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterObjectsScreens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitObjectsScreens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitObjectsScreens(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectsScreensContext objectsScreens() throws RecognitionException {
		ObjectsScreensContext _localctx = new ObjectsScreensContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_objectsScreens);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(PONAME_VAR);
			setState(44);
			match(PODEFINITION);
			setState(45);
			match(PRACET_LIST_OPEN);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLNAME_VAR) {
				{
				setState(46);
				objectsScreen();
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PLCOMMA) {
					{
					{
					setState(47);
					match(PLCOMMA);
					setState(48);
					objectsScreen();
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(56);
			match(PRACET_LIST_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectsScreenContext extends ParserRuleContext {
		public TerminalNode PLNAME_VAR() { return getToken(MyParser.PLNAME_VAR, 0); }
		public TerminalNode PLPRACET_OBJECT_OPEN() { return getToken(MyParser.PLPRACET_OBJECT_OPEN, 0); }
		public TerminalNode PRACET_OBJECT_CLOSE() { return getToken(MyParser.PRACET_OBJECT_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<TerminalNode> POCOMMA() { return getTokens(MyParser.POCOMMA); }
		public TerminalNode POCOMMA(int i) {
			return getToken(MyParser.POCOMMA, i);
		}
		public ObjectsScreenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectsScreen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterObjectsScreen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitObjectsScreen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitObjectsScreen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectsScreenContext objectsScreen() throws RecognitionException {
		ObjectsScreenContext _localctx = new ObjectsScreenContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_objectsScreen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(PLNAME_VAR);
			setState(59);
			match(PLPRACET_OBJECT_OPEN);
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(60);
				attribute();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==POCOMMA) {
					{
					{
					setState(61);
					match(POCOMMA);
					setState(62);
					attribute();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(70);
			match(PRACET_OBJECT_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public List<TerminalNode> PONAME_VAR() { return getTokens(MyParser.PONAME_VAR); }
		public TerminalNode PONAME_VAR(int i) {
			return getToken(MyParser.PONAME_VAR, i);
		}
		public List<TerminalNode> PODEFINITION() { return getTokens(MyParser.PODEFINITION); }
		public TerminalNode PODEFINITION(int i) {
			return getToken(MyParser.PODEFINITION, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> POCOMMA() { return getTokens(MyParser.POCOMMA); }
		public TerminalNode POCOMMA(int i) {
			return getToken(MyParser.POCOMMA, i);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribute);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PONAME_VAR) {
				{
				setState(72);
				match(PONAME_VAR);
				setState(73);
				match(PODEFINITION);
				setState(74);
				type();
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(75);
						match(POCOMMA);
						setState(76);
						match(PONAME_VAR);
						setState(77);
						match(PODEFINITION);
						setState(78);
						type();
						}
						} 
					}
					setState(83);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public SimpleobjectContext simpleobject() {
			return getRuleContext(SimpleobjectContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public StaticContext static_() {
			return getRuleContext(StaticContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(86);
				simpleobject();
				}
				break;
			case 2:
				{
				setState(87);
				function();
				}
				break;
			case 3:
				{
				setState(88);
				string();
				}
				break;
			case 4:
				{
				setState(89);
				number();
				}
				break;
			case 5:
				{
				setState(90);
				list();
				}
				break;
			case 6:
				{
				setState(91);
				static_();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleobjectContext extends ParserRuleContext {
		public TerminalNode PONAME_VAR() { return getToken(MyParser.PONAME_VAR, 0); }
		public TerminalNode PRACET_OBJECT_INNER_OPEN() { return getToken(MyParser.PRACET_OBJECT_INNER_OPEN, 0); }
		public TerminalNode PRACET_OBJECT_CLOSE() { return getToken(MyParser.PRACET_OBJECT_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<TerminalNode> POCOMMA() { return getTokens(MyParser.POCOMMA); }
		public TerminalNode POCOMMA(int i) {
			return getToken(MyParser.POCOMMA, i);
		}
		public SimpleobjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleobject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterSimpleobject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitSimpleobject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitSimpleobject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleobjectContext simpleobject() throws RecognitionException {
		SimpleobjectContext _localctx = new SimpleobjectContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simpleobject);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(PONAME_VAR);
			setState(95);
			match(PRACET_OBJECT_INNER_OPEN);
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(96);
				attribute();
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==POCOMMA) {
					{
					{
					setState(97);
					match(POCOMMA);
					setState(98);
					attribute();
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(106);
			match(PRACET_OBJECT_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode PRACET_OBJECT_INNER_OPEN() { return getToken(MyParser.PRACET_OBJECT_INNER_OPEN, 0); }
		public TerminalNode PRACET_OBJECT_CLOSE() { return getToken(MyParser.PRACET_OBJECT_CLOSE, 0); }
		public TerminalNode PRACET_BODY_OPEN() { return getToken(MyParser.PRACET_BODY_OPEN, 0); }
		public TerminalNode PRACET_BODY_CLOSE() { return getToken(MyParser.PRACET_BODY_CLOSE, 0); }
		public List<CntrContext> cntr() {
			return getRuleContexts(CntrContext.class);
		}
		public CntrContext cntr(int i) {
			return getRuleContext(CntrContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PRACET_OBJECT_INNER_OPEN);
			setState(109);
			match(PRACET_OBJECT_CLOSE);
			setState(110);
			match(PRACET_BODY_OPEN);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PBIF || _la==PBNAME_VAR) {
				{
				{
				setState(111);
				cntr();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(PRACET_BODY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode DOUBLE_QUOTATION_OPEN() { return getToken(MyParser.DOUBLE_QUOTATION_OPEN, 0); }
		public TerminalNode DOUBLE_QUOTATION_CLOSE() { return getToken(MyParser.DOUBLE_QUOTATION_CLOSE, 0); }
		public TerminalNode DQTEXT_STRING() { return getToken(MyParser.DQTEXT_STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(DOUBLE_QUOTATION_OPEN);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DQTEXT_STRING) {
				{
				setState(120);
				match(DQTEXT_STRING);
				}
			}

			setState(123);
			match(DOUBLE_QUOTATION_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode PONUMBER() { return getToken(MyParser.PONUMBER, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_number);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(PONUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode PRACET_LIST_OPEN() { return getToken(MyParser.PRACET_LIST_OPEN, 0); }
		public TerminalNode PRACET_LIST_CLOSE() { return getToken(MyParser.PRACET_LIST_CLOSE, 0); }
		public List<ObjectsScreenContext> objectsScreen() {
			return getRuleContexts(ObjectsScreenContext.class);
		}
		public ObjectsScreenContext objectsScreen(int i) {
			return getRuleContext(ObjectsScreenContext.class,i);
		}
		public List<SimpleobjectContext> simpleobject() {
			return getRuleContexts(SimpleobjectContext.class);
		}
		public SimpleobjectContext simpleobject(int i) {
			return getRuleContext(SimpleobjectContext.class,i);
		}
		public List<StringListContext> stringList() {
			return getRuleContexts(StringListContext.class);
		}
		public StringListContext stringList(int i) {
			return getRuleContext(StringListContext.class,i);
		}
		public List<TerminalNode> PLCOMMA() { return getTokens(MyParser.PLCOMMA); }
		public TerminalNode PLCOMMA(int i) {
			return getToken(MyParser.PLCOMMA, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(PRACET_LIST_OPEN);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PONAME_VAR) | (1L << PLDOUBLE_QUOTATION_OPEN) | (1L << PLNAME_VAR))) != 0)) {
				{
				setState(131);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PLNAME_VAR:
					{
					setState(128);
					objectsScreen();
					}
					break;
				case PONAME_VAR:
					{
					setState(129);
					simpleobject();
					}
					break;
				case PLDOUBLE_QUOTATION_OPEN:
					{
					setState(130);
					stringList();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PLCOMMA) {
					{
					{
					setState(133);
					match(PLCOMMA);
					setState(137);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case PLNAME_VAR:
						{
						setState(134);
						objectsScreen();
						}
						break;
					case PONAME_VAR:
						{
						setState(135);
						simpleobject();
						}
						break;
					case PLDOUBLE_QUOTATION_OPEN:
						{
						setState(136);
						stringList();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(146);
			match(PRACET_LIST_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StaticContext extends ParserRuleContext {
		public List<TerminalNode> PONAME_VAR() { return getTokens(MyParser.PONAME_VAR); }
		public TerminalNode PONAME_VAR(int i) {
			return getToken(MyParser.PONAME_VAR, i);
		}
		public TerminalNode PODOT() { return getToken(MyParser.PODOT, 0); }
		public StaticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterStatic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitStatic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitStatic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StaticContext static_() throws RecognitionException {
		StaticContext _localctx = new StaticContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_static);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(PONAME_VAR);
			setState(149);
			match(PODOT);
			setState(150);
			match(PONAME_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
